<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motomini_tool</name>
  <version>0.1.0</version>
  <description>Fake MotoMini simulation and tool Trigger wrapper nodes for testing.</description>

  <maintainer email="vinhpi@example.com">vinhpi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>motoman_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>